1998-03-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Add some platform configurations.

1998-02-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure, configure.in: Remove substitution in
	gnatdist.in. gnatdist.in script is not used anymore.

	* MANIFEST: Remove gnatdist.in.

1998-02-18  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Remove s-gafino.ad[bs]. No longer needed.

1998-02-18  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Do not test for Errno anymore since it is
	available in GNAT.OS_Lib.

1998-02-12  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Correct typo.

	* README: Add missing 's' to Ada Core Technologies.

1998-02-12  Laurent Guerby  <guerby@gnat.com>

	* MANIFEST: Replace Garlic/DOFF by Garlic/UNDALL.

	* configure.in: Remove -O0 for Digital Unix, no longer needed.

	* configure: Ditto.

	* MANIFEST: Add Garlic/DALL and Garlic/DOFF to the distribution.

1998-02-11  Laurent Guerby  <guerby@gnat.com>

	* README: Fix typos.

1998-01-26  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Updated NEWS file.

	* prereq: Bumped to 980126

1998-01-19  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add s-gartyp.adb to distribution

1998-01-02  Samuel Tardieu  <sam@inf.enst.fr>

	* README: Remove references to glade_version.txt

	* MANIFEST: Add s-gartyp.ads to distribution
	Remove references to glade_version.txt

1997-12-30  Samuel Tardieu  <sam@inf.enst.fr>

	* README: Updated

1997-12-18  Samuel Tardieu  <sam@inf.enst.fr>

	* prereq: New file containing the oldest required version of GNAT.

	* configure.in: Use prereq file to check that a recent enough
	version of GNAT is used.

1997-12-15  Samuel Tardieu  <sam@inf.enst.fr>

	* README: Add a note on "gnatdist -V".
	Mention that unified diff (-u) are accepted as well when
	submitting patches.

1997-12-14  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add glade_version.txt in distribution.

1997-12-10  Samuel Tardieu  <sam@inf.enst.fr>
