@@ -126,15 +126,15 @@ Examples/Messages/pingpong.cfg
 Examples/Messages/rci.adb
 Examples/Messages/rci.ads
 Examples/Messages/pure.ads
-Garlic/2agtplsp.ads
-Garlic/2egtplsp.ads
-Garlic/2ggtplsp.ads
-Garlic/2lgtplsp.ads
-Garlic/2sgtplsp.ads
-Garlic/2ugtplsp.ads
-Garlic/2wgarcon.ads
-Garlic/2wgtplsp.ads
-Garlic/2xgtplsp.ads
+Garlic/5agtplsp.ads
+Garlic/5egtplsp.ads
+Garlic/5ggtplsp.ads
+Garlic/5lgtplsp.ads
+Garlic/5sgtplsp.ads
+Garlic/5ugtplsp.ads
+Garlic/5wgarcon.ads
+Garlic/5wgtplsp.ads
+Garlic/5xgtplsp.ads
 Garlic/DALL
 Garlic/Makefile.am
 Garlic/Makefile.in
