@@ -222,7 +222,7 @@ AC_MSG_RESULT([tcp])
 ])
 if test "$TCP_INCLUDED" = ""; then
   AC_MSG_CHECKING([thread-blocking I/O])
-    if grep Non_Blocking $srcdir/Garlic/2${PLATFORM_SPECIFIC}gtplsp.ads \
+    if grep Non_Blocking $srcdir/Garlic/5${PLATFORM_SPECIFIC}gtplsp.ads \
       > /dev/null 2>&1; then
 	AC_MSG_RESULT([no])
 	PROTOCOLSOURCES="${PROTOCOLSOURCES} \$(NOBLTCPSOURCES)"
